<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MortgageCalculatorActivity"
    tools:showIn="@layout/activity_main"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountBorrowedLabelText"
        android:textColor="@color/white"
        android:id="@+id/amountBorrowedLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:id="@+id/amountBorrowedTextField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/interestRateLabelText"
        android:id="@+id/interestRateLabel" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <SeekBar
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:id="@+id/interestRateSeekBar"
            android:max="100"
            android:progress="50"
            android:progressTint="@color/white"
            android:background="@color/colorAccent"
            android:backgroundTintMode="src_over"
            android:thumbTint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:id="@+id/interestRateSeekBarTextField" />


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loanTermLabelText"
        android:textColor="@color/white"
        android:id="@+id/loanTermLabel" />

    <RadioGroup
        android:id="@+id/loanTermRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <RadioButton
            android:id="@+id/sevenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sevenRadioText"
            android:textColor="@color/white"
            android:buttonTint="@color/colorAccent"
            android:checked="true" />

        <RadioButton
            android:id="@+id/fifteenRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteenRadioText"
            android:textColor="@color/white"
            android:buttonTint="@color/colorAccent" />

        <RadioButton
            android:id="@+id/thirtyRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/colorAccent"
            android:text="@string/thirtyRadioText" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxesInsuranceLabelText"
        android:textColor="@color/white"
        android:id="@+id/taxesInsuranceLabel" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxesInsuranceCheckBoxText"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:buttonTint="@color/colorAccent"
        android:id="@+id/taxesInsuranceCheckBox" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/calculateButtonText"
        android:id="@+id/calculateButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthlyPaymentLabelText"
            android:textColor="@color/white"
            android:id="@+id/monthlyPaymentLabel" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/finalAmountText"
        android:textColor="@color/colorAccent"
        android:layout_weight="0.03"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
